--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ worker = "0.7"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 utoipa = { version = "5", features = ["preserve_order"] }
+js-sys = "0.3"
 
 # リンター設定
 [lints.rust]
