--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,7 @@
 name = "rust"
 main = "build/worker/shim.mjs"
-compatibility_date = "2025-12-17"
+compatibility_date = "2025-12-13"
 
 [build]
 command = "cargo install -q worker-build && worker-build --release"
+watch_dir = ["src"]
