--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 utoipa = { version = "5", features = ["preserve_order"] }
 js-sys = "0.3"
+web-sys = { version = "0.3", features = ["Performance", "PerformanceTiming"] }
+wasm-bindgen = "0.2"
 
 # リンター設定
 [lints.rust]
