--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/node": "^25.0.3",
     "@types/ws": "^8.18.1",
     "@vitest/coverage-v8": "^1.0.0",
+    "lefthook": "^2.0.12",
     "typescript": "^5.9.3",
     "vitest": "^1.0.0",
     "wrangler": "^4.56.0",
