WebSocket処理の改善とCORS対応
- GameSession DOのWebSocket処理をリファクタリング（addEventListenerからwebSocketMessage/webSocketCloseメソッドに変更）
- CORSヘッダーの追加とOPTIONSリクエストの処理を実装
- Origin検証ロジックの改善（環境変数対応）
- WebSocketハンドラーのログ改善
- OpenAPIドキュメントにWebSocketエンドポイント情報を追加
- テストページの改善（サーバーURL選択、クイック送信ボタン追加）
- worker依存関係を0.7.2に更新
- wrangler.tomlにオブザーバビリティ設定を追加

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -28,3 +28,15 @@ class_name = "RoomManager"
 [[migrations]]
 tag = "v1"
 new_sqlite_classes = ["GameSession", "RoomManager"]
+
+[observability]
+[observability.logs]
+enabled = true
+head_sampling_rate = 1
+invocation_logs = true
+persist = true
+
+[observability.traces]
+enabled = true
+persist = true
+head_sampling_rate = 1
